@@ -73,6 +73,7 @@ add_subdirectory( include )
 add_subdirectory( src )
 add_subdirectory( doc )
 add_subdirectory( tests )
+add_subdirectory( package )
 
 ##
 ## Packaging
