@@ -30,17 +30,80 @@ BUILD/tests/tld_test_full_uri
 BUILD/tests/tld_test_object
 cp ../../tests/effective_tld_names.dat .
 BUILD/tests/tld_test_tld_names
-if BUILD/src/tld_parser; then
-	echo "tld_parser without a path did not generate an error";
-	exit 1;
+if BUILD/src/tld_parser
+then
+    echo "tld_parser without a path did not generate an error";
+    exit 1;
 fi
-if BUILD/src/tld_parser -h; then
-	echo "tld_parser -h did not exit with an error";
-	exit 1;
+if BUILD/src/tld_parser -h
+then
+    echo "tld_parser -h did not exit with an error";
+    exit 1;
 fi
-if BUILD/src/tld_parser --help; then
-	echo "tld_parser --help did not exit with an error";
-	exit 1;
+if BUILD/src/tld_parser --help
+then
+    echo "tld_parser --help did not exit with an error";
+    exit 1;
+fi
+if BUILD/src/validate_tld -h
+then
+    echo "validate_tld -h did not exit with an error";
+    exit 1;
+fi
+if BUILD/src/validate_tld --help
+then
+    echo "validate_tld --help did not exit with an error";
+    exit 1;
+fi
+if BUILD/src/validate_tld -l
+then
+    echo "validate_tld -l did not exit with an error";
+    exit 1;
+fi
+if BUILD/src/validate_tld --list
+then
+    echo "validate_tld --list did not exit with an error";
+    exit 1;
+fi
+if ! BUILD/src/validate_tld http://www.m2osw.com/validate/tld?perfect=work
+then
+    echo "validate_tld <valid URI> did exit with an error";
+    exit 1;
+fi
+if BUILD/src/validate_tld http://www.m2osw.comm/validate/tld?perfect=work
+then
+    echo "validate_tld <valid URI> did not exit with an error";
+    exit 1;
+fi
+if BUILD/src/validate_tld --schemes ftp http://www.m2osw.com/bad/scheme
+then
+    echo "validate_tld <valid URI> did not exit with an error";
+    exit 1;
+fi
+if ! BUILD/src/validate_tld --schemes ftp ftp://www.m2osw.com/matching/scheme
+then
+    echo "validate_tld <valid URI> did exit with an error";
+    exit 1;
+fi
+if ! BUILD/src/validate_tld mailto:alexis@m2osw.com
+then
+    echo "validate_tld <valid URI> did exit with an error";
+    exit 1;
+fi
+if ! BUILD/src/validate_tld -v mailto:alexis@m2osw.com
+then
+    echo "validate_tld <valid URI> did exit with an error";
+    exit 1;
+fi
+if BUILD/src/validate_tld --verbose
+then
+    echo "validate_tld <valid URI> did not exit with an error";
+    exit 1;
+fi
+if BUILD/src/validate_tld --schemes
+then
+    echo "validate_tld <valid URI> did not exit with an error";
+    exit 1;
 fi
 echo
 echo "***"
@@ -61,3 +124,5 @@ genhtml --legend --demangle-cpp --no-branch-coverage --show-details coverage.inf
 
 echo "Process started  on $start_date"
 echo "Process finished on `date`"
+
+# vim: ts=4 sw=4 et
