@@ -646,7 +646,9 @@ WARN_LOGFILE           =
 # with spaces.
 
 INPUT                  = @CMAKE_CURRENT_BINARY_DIR@/../include/libtld/tld.h \
-			 @CMAKE_CURRENT_SOURCE_DIR@/..
+			 @CMAKE_CURRENT_SOURCE_DIR@/../php \
+			 @CMAKE_CURRENT_SOURCE_DIR@/../src \
+			 @CMAKE_CURRENT_SOURCE_DIR@/../tests
 
 # This tag can be used to specify the character encoding of the source files
 # that doxygen parses. Internally doxygen uses the UTF-8 encoding, which is
