@@ -1,0 +1,17 @@
+Package: libtld
+Version: @LIBTLD_VERSION_MAJOR@.@LIBTLD_VERSION_MINOR@.@LIBTLD_VERSION_PATCH@
+Section: libs
+Priority: optional
+Architecture: $(architecture())
+Homepage: http://snapwebsites.org/project/libtld
+Maintainer: Made to Order Software Corporation <contact@m2osw.com>
+Description: TLD library to discover and verify TLDs in a URI.
+ This package gives you the libtld library and the validate_tld tool.
+ .
+ The libtld offers capabilities to read any world wide TLD from any URI.
+ The library understands all the currently valid TLDs and also knows of
+ now unused TLDs, and the few TLDs that are assigned but still not used.
+ It also can be used to check email addresses and full URIs. It comes
+ with a tool, validate_tld, which can be directly used on your command
+ line to validate URIs and emails. Finally, it includes a PHP extension
+ to access the library directly from your PHP scripts.
