@@ -8,6 +8,7 @@ libtld (1.4.0) unstable; urgency=medium
   * Added support to parse email addresses.
   * Enhanced several of the unit tests.
   * Added a script to run a full coverage over the library.
+  * Added a command line tool for scripting.
 
  -- Alexis Wilke <alexis@m2osw.com>  Mon, 18 Feb 2013 00:43:48 -0800
 
